Cabal-Version: >= 1.10
Name: http-slim
Version: 1.0
Build-type: Simple
License: BSD3
License-file: LICENSE
Author: Krasimir Angelov <kr.angelov@gmail.com>
Maintainer: Krasimir Angelov <kr.angelov@gmail.com>
Homepage: https://github.com/haskell/HTTP
Category: Network
Synopsis: A library for client/server HTTP with TLS support
Description:

 This package supports client/server web programming in Haskell. It lets you set up
 HTTP connections, transmitting requests and processing the responses coming back, all
 from within the comforts of Haskell. It's dependent on the network package to operate,
 but other than that, the implementation is all written in Haskell.
 .
 A basic API for issuing single HTTP requests + receiving responses is provided. On top
 of that, a session-level abstraction is also on offer  (the @BrowserAction@ monad);
 it taking care of handling the management of persistent connections, proxies,
 state (cookies) and authentication credentials required to handle multi-step
 interactions with a web server.
 .
 Here's an example use:
 .
 >
 >    do
 >      rsp <- Network.HTTP.simpleHTTP (getRequest "http://www.haskell.org/")
 >              -- fetch document and return it (as a 'String'.)
 >      fmap (take 100) (getResponseBody rsp)
 >
 >    do
 >      (_, rsp)
 >         <- Network.Browser.browse $ do
 >               setAllowRedirects True -- handle HTTP redirects
 >               request $ getRequest "http://www.haskell.org/"
 >      return (take 100 (rspBody rsp))
 >
 >    do simpleServer 8080 $ \req ->
 >         outputHTML ("<p>Hello, world</p>\n<pre>"++show req++"</pre>")
 >

Extra-Source-Files: CHANGES

tested-with:
  GHC==9.2.1, GHC==9.0.1,
  GHC==8.10.7, GHC==8.8.4, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2, GHC==8.0.2,
  GHC==7.10.3, GHC==7.8.4, GHC==7.6.3

Source-Repository head
  type: git
  location: https://github.com/haskell/HTTP.git

Flag warn-as-error
  default:     False
  description: Build with warnings-as-errors
  manual:      True

Flag conduit10
  description: Use version 1.0.x or below of the conduit package (for the test suite)
  default: False

Flag warp-tests
  description: Test against warp
  default:     False
  manual:      True

flag network-uri
  description: Get Network.URI from the network-uri package
  default: True

flag network-bsd
   description: Get Network.BSD from the network-bsd package
   default: True

Library
  Exposed-modules:
                 Network.TCP,
                 Network.HTTP,
                 Network.HTTP.Headers,
                 Network.HTTP.Base,
                 Network.HTTP.Auth,
                 Network.HTTP.Cookie,
                 Network.HTTP.Proxy,
                 Network.HTTP.HandleStream,
                 Network.Browser,
                 Network.FastCGI
  Other-modules:
                 Network.HTTP.Base64,
                 Network.HTTP.MD5Aux,
                 Network.HTTP.Utils
                 Paths_http_slim
  GHC-options: -fwarn-missing-signatures -Wall

  -- note the test harness constraints should be kept in sync with these
  -- where dependencies are shared
  build-depends:
      base          >= 4.6.0.0   && < 4.17
    , array         >= 0.3.0.2   && < 0.6
    , parsec        >= 2.0       && < 3.2
    , time          >= 1.1.2.3   && < 1.13
    , transformers  >= 0.2.0.0   && < 0.7
        -- transformers-0.2.0.0 is the first to have Control.Monad.IO.Class
    -- The following dependencies are refined by flags, but they should
    -- still be mentioned here on the top-level.
    , mtl           >= 2.0.0.0   && < 2.4
    , network       >= 2.4       && < 3.2
    , HsOpenSSL
    , bytestring
    , containers

  default-language: Haskell98
  default-extensions: FlexibleInstances

  if flag(network-uri)
    Build-depends: network-uri == 2.6.*, network >= 2.6
  else
    Build-depends: network < 2.6
  if flag(network-bsd)
     build-depends: network-bsd >= 2.7 && < 2.9,
                    network >= 2.7
  else
     build-depends: network < 2.7

  if flag(warn-as-error)
    ghc-options:      -Werror

  if os(windows)
    Build-depends: Win32 >= 2.2.0.0 && < 2.14
